# ngtech

./: .gitignore  .travis.yml  ReleaseNotes.txt  ReleaseNotes_bugs.txt  ReleaseNotes_todo.txt  read.txt
Bins/: ast_conf.txt  (+4 more)
Development/Src/: ALSound.cpp  ALSound.h  ALSoundSource.cpp  ALSoundSource.h  ALSystem.cpp  ALSystem.h  ASTEngine.cpp  ASTEngine.h  CMakeLists.txt  Cache.cpp  Cache.h  Camera.cpp  Camera.h  Cash.cpp  Cash.h  Effect.cpp  Effect.h  Engine.cpp  Engine.h  EnginePrivate.h  EngineScriptInterp.cpp  EngineScriptInterp.h  Flare.cpp  Flare.h  Font.cpp  Font.h  Frustum.cpp  Frustum.h  GLDisplayList.cpp  GLDisplayList.h  GLExtensions.cpp  GLExtensions.h  GLFBO.cpp  GLFBO.h  GLOcclusionQuery.cpp  GLOcclusionQuery.h  GLShader.cpp  GLShader.h  GLSystem.cpp  GLSystem.h  (+46 more)
Development/Src/BuildConfig/: BuildConfig.props
Development/Src/Common/: BBox.cpp  BBox.h  BSphere.cpp  BSphere.h  CMakeLists.txt  Common.vcxproj  Common.vcxproj.filters  CommonPrivate.h  DebugLayer.cpp  DebugLayer.h  Delegate.h  EString.cpp  EString.h  IAudio.h  IDataManager.h  IGUI.h  IGame.h  IILImage.h  IRender.h  IScripting.h  IWindow.h  I_FFP.cpp  I_FFP.h  I_MeshFormat.h  I_MeshFormatSkinned.h  InputConverter.cpp  MathLib.cpp  MathLib.h  NonCopyable.h  Singleton.h  StringHelper.cpp  StringHelper.h  ThreadPool.cpp  ThreadPool.h  Types.h  Utils.h  Vector.h  iGame.cpp
Development/Src/Core/: BuildDefines.h  CMakeLists.txt  CVARManager.cpp  Config.cpp  Config.h  Core.vcxproj  Core.vcxproj.filters  CoreBindings.cpp  CoreManager.cpp  CoreManager.h  CorePrivate.h  CoreUnity.cpp  CvarManager.h  Error.cpp  Error.h  File.cpp  File.h  IncludesAndLibs.cpp  IncludesAndLibs.h  Log.cpp  Log.h  MathLib.cpp  MathLib.h  MiniDumper.cpp  Scripting.cpp  Scripting.h  VFS.cpp  VFS.h  WrappedScriptFunctions.cpp  WrappedScriptFunctions.h
Development/Src/Core/inc/: ASYNCFile.h  BBox.h  BSphere.h  BuildDefines.h  Config.h  CoreManager.h  CorePrivate.h  CvarManager.h  DataFileStream.h  DataStream.h  DynLib.h  Error.h  File.h  FileHelper.h  ILImage.h  IncludesAndLibs.h  Log.h  MathLib.h  MeshFormatNGGFSkinned.h  MeshFormatNGGFStatic.h  MeshFormatXSMSH.h  MeshLoader.h  Model.h  Remotery.h  Scripting.h  SkinnedMesh.h  SkinnedMeshFormat.h  SkinnedMeshFormatXSSMSH.h  SkinnedMeshLoader.h  StatsAndAchievements.h  SteamWorksMgr.h  SteamWorks_API.h  Thread.h  UString.h  VFS.h  VFile.h  WrappedScriptFunctions.h  ati_eyefinity.h  coredll.h  libProfiler.h  (+2 more)
Development/Src/Core/src/: Additions.cpp  AsyncFS.cpp  CVARManager.cpp  Config.cpp  CoreBindings.cpp  CoreGlobals.cpp  CoreManager.cpp  DataFileStream.cpp  DataStream.cpp  DynLib.cpp  Error.cpp  ExternalAdditions.cpp  File.cpp  ILImage.cpp  Log.cpp  MathLib.cpp  MeshFormatNGGFSkinned.cpp  MeshFormatNGGFStatic.cpp  MeshFormatXSMSH.cpp  MeshLoader.cpp  Model.cpp  Profiler.cpp  Remotery.cpp  Scripting.cpp  SkinnedMesh.cpp  SkinnedMeshFormatXSMSH.cpp  SkinnedMeshLoader.cpp  SystemInfo.cpp  Thread.cpp  UString.cpp  VFS.cpp  VFSUtils.cpp  VFile.cpp  WrappedScriptFunctions.cpp  ati_eyefinity.cpp  iLSystem.cpp  steamworks.cpp  steamworks_api.cpp  steamworks_userstats.cpp  strtools.cpp
Development/Src/Editors/EngineCLR/: AssemblyInfo.cpp  EngineCLR.cpp  EngineCLR.h  EngineCLR.vcxproj  EngineCLR.vcxproj.filters  MarshallString.h  Stdafx.cpp  Stdafx.h  Vector3.h
Development/Src/Editors/LogicEditor/: LogicEditor.csproj  LogicEditorForm.Designer.cs  LogicEditorForm.cs  Program.cs
Development/Src/Editors/MeshViewer/: Form1.Designer.cs  Form1.cs  Form1.resx  MainForm.Designer.cs  MainForm.cs  MainForm.resx  MeshViewer.csproj  Program.cs
Development/Src/Editors/NGEd/: App.config  MainForm.Designer.cs  MainForm.cs  NGEd.csproj  Program.cs
Development/Src/Engine/: CMakeLists.txt  Console.cpp  Console.h  CoreFunctImpl.cpp  DLLDef.h  Engine.vcxproj  Engine.vcxproj.filters  EngineAppBase.cpp  EngineAppBase.h  EngineUnity.cpp  ThreadFuncts.cpp  ThreadFuncts.h
Development/Src/Engine/API/: RenderAPI.h
Development/Src/Engine/inc/: ALSound.h  ALSoundSource.h  ALSystem.h  AudioUpdateJob.h  Cache.h  Callback.h  Camera.h  Console.h  DLLDef.h  Effect.h  Engine.h  EngineAppBase.h  EngineMathToPhysx.inl  EnginePlugins.h  EnginePrivate.h  EngineScriptInterp.h  EngineThreads.h  Flare.h  Font.h  Frustum.h  GLDisplayList.h  GLExtensions.h  GLFBO.h  GLOcclusionQuery.h  GLShader.h  GLSystem.h  GLTexture.h  GLVBO.h  GUI.h  ILImage.h  ILSystem.h  Light.h  LoadingScreen.h  Material.h  MeshFormat.h  MeshLoader.h  Model.h  Object.h  ObjectSkinnedMesh.h  ParticleSystem.h  (+17 more)
Development/Src/Engine/src/: ALSound.cpp  ALSoundSource.cpp  ALSystem.cpp  API_InputConverter.cpp  AudioUpdateJob.cpp  Cache.cpp  Camera.cpp  CameraFPS.cpp  CameraFixed.cpp  CameraFree.cpp  Console.cpp  ConsoleCommands.cpp  CoreFunctImpl.cpp  Effect.cpp  Engine.cpp  EngineAppBase.cpp  EngineGlobals.cpp  EnginePlugins.cpp  EnginePrivate.cpp  EngineScriptInterp.cpp  EngineThreads.cpp  Flare.cpp  Font.cpp  Frustum.cpp  GLDisplayList.cpp  GLExtensions.cpp  GLFBO.cpp  GLOcclusionQuery.cpp  GLShader.cpp  GLSystem.cpp  GLTexture.cpp  GLVBO.cpp  GUI.cpp  ILImage.cpp  ILSystem.cpp  InterSection.cpp  Light.cpp  LoadingScreen.cpp  MandelbrotDemo.cpp  Material.cpp  (+27 more)
Development/Src/ExampleGame/: CMakeLists.txt  DLLx.h  ExampleGame.h  ExampleGame.vcxproj  ExampleGame.vcxproj.filters  GameGUI.h  GameGui.cpp  Main.cpp  MandelbrotDemo.cpp  ReadMe.txt  SponzaDemo.cpp  SponzaDemo.cpp.rej  TerrainDemo.cpp  stdafx.cpp  stdafx.h
Development/Src/Includes/: versions.txt
Development/Src/Includes/GL/: glext.h
Development/Src/Includes/IL/: ilu.h
Development/Src/Includes/MyGUI/: MyGui.vcxproj  MyGui.vcxproj.filters
Development/Src/Includes/Newton/: Newton.h
Development/Src/Includes/OGG/: codec.h  ogg.h
Development/Src/Launcher/: CMakeLists.txt  Launcher.cpp  Launcher.rc  Launcher.vcxproj  Launcher.vcxproj.filters  ReadMe.txt  Resource.h  stdafx.cpp
Development/Src/OGLDrv/: CMakeLists.txt  OGLDrv.vcxproj  OGLDrv.vcxproj.filters  ReadMe.txt  renderUnity.cpp  stdafx.cpp
Development/Src/Platform/: CMakeLists.txt  Platform.vcxproj  Platform.vcxproj.filters
(+388 files in other folders)
