cmake_minimum_required(VERSION 2.8.4)
project(LauncherImpl)
set(LIBRARIES_FROM_REFERENCES "")


file(GLOB LAUNCHER_SOURCE
    "*.h"
    "*.cpp"
)

link_directories(../../Externals/physx/Lib/win64)
link_directories(../../Externals/RenderAdditions/libs/windows/win64)

SET(PHYSX_LIBCOOKING_LIST PhysX3Cooking_x64)
SET(PHYSX_LIBCHARACTER_LIST PhysX3CharacterKinematic_x64)
SET(PHYSX_LIBEXTENSIONS_LIST PhysX3Extensions)
SET(PHYSX_LIBCORE_LIST PhysX3_x64)
SET(PHYSX_LIBCOMMON_LIST PhysX3Common_x64)
SET(PHYSX_LIBVEHICLE_LIST PhysX3Vehicle)
SET(PHYSX_LIBPROFILESDK_LIST PhysXProfileSDK)
SET(PHYSX_LIBVDS_LIST PhysXVisualDebuggerSDK)
SET(PHYSX_LIBTASK_LIST PxTask)

SET(PHYSX_LIBLOWLEVEL_LIST LowLevel)
SET(PHYSX_LIBLOWLEVELCLOTH_LIST LowLevelCloth.lib)
SET(PHYSX_LIBSIMULCONTROLLER_LIST SimulationController.lib)
SET(PHYSX_LIBSCENEQUERY_LIST SceneQuery.lib)



add_executable(Launcher ${LAUNCHER_SOURCE})
IF(UNIX AND NOT MAC)
target_link_libraries(Launcher GLFW3 OpenAL ExampleGame Externals Platform Common Core Engine OGLDRV "${LIBRARIES_FROM_REFERENCES}" ${OPENGL_LIBRARY} ${X11_LIBRARY} ${PHYSX_LIBCOOKING_LIST} ${PHYSX_LIBCHARACTER_LIST} ${PHYSX_LIBEXTENSIONS_LIST} ${PHYSX_LIBCORE_LIST} ${PHYSX_LIBCOMMON_LIST} ${PHYSX_LIBVEHICLE_LIST} ${PHYSX_LIBPROFILESDK_LIST} ${PHYSX_LIBVDS_LIST} ${PHYSX_LIBTASK_LIST} ${PHYSX_LIBLOWLEVEL_LIST}  ${PHYSX_LIBLOWLEVELCLOTH_LIST} ${PHYSX_LIBSIMULCONTROLLER_LIST}   ${PHYSX_LIBSCENEQUERY_LIST} ${CMAKE_THREAD_LIBS_INIT} pthread dl bsd)
ELSE(UNIX AND NOT MAC)
target_link_libraries(Launcher GLFW3 OpenAL ExampleGame Externals Platform Common Core Engine OGLDRV "${LIBRARIES_FROM_REFERENCES}" ${OPENGL_LIBRARY} ${PHYSX_LIBCOOKING_LIST} ${PHYSX_LIBCHARACTER_LIST} ${PHYSX_LIBEXTENSIONS_LIST} ${PHYSX_LIBCORE_LIST} ${PHYSX_LIBCOMMON_LIST} ${PHYSX_LIBVEHICLE_LIST} ${PHYSX_LIBPROFILESDK_LIST} ${PHYSX_LIBVDS_LIST} ${PHYSX_LIBTASK_LIST} ${PHYSX_LIBLOWLEVEL_LIST}  ${PHYSX_LIBLOWLEVELCLOTH_LIST} ${PHYSX_LIBSIMULCONTROLLER_LIST} ${PHYSX_LIBSCENEQUERY_LIST})
ENDIF(UNIX AND NOT MAC)


set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -D_DEBUG")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -D_DEBUG")